<resources>
    <string name="app_name">VaultShare</string>
    <string name="default_web_client_id" translatable="false">1062568562602-0mu6lcuguc0v4qp9k8tsgnk9elg5qv7r.apps.googleusercontent.com</string>
    <string name="file_icon_description">File type icon</string>
    <string name="file_viewer_image">Displayed file content</string>

    <string-array name="sort_options_array">
        <item>Name</item>
        <item>Date</item>
        <item>Size</item>
    </string-array>

    <!-- Splash Screen -->
    <string name="splash_app_name">VaultShare</string>

    <!-- Login Screen -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="google_sign_in_button">Sign in with Google</string>
    <string name="logo_content_desc">App Logo</string>
    <string name="subtitle">Your Files Anywhere Anytime</string>
    <string name="login_title">Sign In</string>
    <string name="login_email_hint">Email Address</string>
    <string name="login_password_hint">Enter Password</string>
    <string name="continue_with">Continue with</string>

    <!-- Main Dashboard -->
    <string name="title_home">Home</string>
    <string name="title_vault">Vault</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_trash">Trash</string>
    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>

    <!-- Vault Fragment -->
    <string name="filter_by_type">Filter by type:</string>
    <string name="radio_all">All</string>
    <string name="radio_docs">Documents</string>
    <string name="radio_images">Images</string>
    <string name="sort_by">Sort by:</string>
    <string name="select_all">Select all</string>
    <string name="vault_content_placeholder">Vault content would be here</string>

    <!-- Home Fragment -->
    <string name="header_my_files">My Files</string>
    <string name="search_files_hint">Search files</string>
    <string name="empty_state_no_files">No files uploaded yet</string>
    <string name="add_file">Add File</string>

</resources>
